Add support for JDK 11 as runtime environment
- bump asm version to 6.2 to add support for java 11.
- remove java.xml.bind since it's removed as part of https://bugs.openjdk.java.net/browse/JDK-8189188
- update DiagnosticReportCommandTest to have a specific parameter for java 11
  because of https://bugs.openjdk.java.net/browse/JDK-8202127 and current
  surefire behavior

--- a/public/pom.xml
+++ b/public/pom.xml
@@ -91,7 +91,7 @@
     <scala-maven-plugin.version>3.3.2</scala-maven-plugin.version>
     <scala.version>2.11.12</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
-    <asm.version>6.1.1</asm.version>
+    <asm.version>6.2</asm.version>
     <metrics.version>4.0.2</metrics.version>
     <scala.target.vm>1.8</scala.target.vm>
     <scala.java.additional.args/>
@@ -935,7 +935,7 @@
         <jdk>[9, )</jdk>
       </activation>
       <properties>
-        <java.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-modules java.xml.bind</java.exports>
+        <java.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</java.exports>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <scala.java.additional.args>-nobootcp</scala.java.additional.args>
       </properties>
