Upgrade lucene-index tests to junit 5
Upgrade most of lucene index tests to junit 5.
A small set of tests are still using junit 4 because of mockito runner,
since junit 5 version does not work in IJ reliably;
and because of Rule(s) usages that are not yet migrated.

--- a/public/community/lucene-index/pom.xml
+++ b/public/community/lucene-index/pom.xml
@@ -137,6 +137,10 @@ the relevant Commercial Agreement.
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
         </dependency>
