--- a/public/community/bolt/pom.xml
+++ b/public/community/bolt/pom.xml
@@ -109,6 +109,10 @@
         <artifactId>junit-jupiter-params</artifactId>
       </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
         </dependency>
