--- a/private/pom.xml
+++ b/private/pom.xml
@@ -48,7 +48,7 @@
           <rules>
             <evaluateBeanshell>
               <message>Maven module has to be in a "groupId" beginning with "com.neo4j"</message>
-              <condition>String s = "${project.groupId}"; s.startsWith("com.neo4j")</condition>
+	      <condition>{String s = "${project.groupId}"; s.startsWith("com.neo4j");}</condition>
             </evaluateBeanshell>
             <requireFilesDontExist>
               <message>You are not allowed to have classes in "org" package</message>
