Migrate index module test to junit 5.
Introduce random extension.

--- a/public/community/index/pom.xml
+++ b/public/community/index/pom.xml
@@ -91,6 +91,10 @@ the relevant Commercial Agreement.
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-migrationsupport</artifactId>
         </dependency>
         <dependency>
