creates top level pom properties for compilers & caffeine versions updates 2.3 cypher dependency: 2.3.(10/12) -> 2.3.12 updates 3.1 cypher dependency: 3.1.(6/8) -> 3.1.9

--- a/public/enterprise/cypher/slotted-runtime/pom.xml
+++ b/public/enterprise/cypher/slotted-runtime/pom.xml
@@ -180,7 +180,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-2.3</artifactId>
-      <version>2.3.10</version>
+      <version>${cypher.compatibility.23}</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
@@ -211,7 +211,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-3.1</artifactId>
-      <version>3.1.6</version>
+      <version>${cypher.compatibility.31}</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
