--- a/public/pom.xml
+++ b/public/pom.xml
@@ -43,6 +43,10 @@
     <forkCounts>0</forkCounts>
     <maven.build.timestamp.format>yyMMddHHmmssSSS</maven.build.timestamp.format>
     <checkstyle.strict>true</checkstyle.strict>
+    <cypher.compatibility.23>2.3.12</cypher.compatibility.23>
+    <cypher.compatibility.31>3.1.9</cypher.compatibility.31>
+    <cypher.compatibility.32>3.2.12</cypher.compatibility.32>
+    <caffeine.version>2.3.3</caffeine.version>
   </properties>
 
   <modules>
@@ -505,7 +509,7 @@
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
-        <version>2.3.3</version>
+        <version>${caffeine.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
