--- a/public/community/cypher/cypher/pom.xml
+++ b/public/community/cypher/cypher/pom.xml
@@ -155,7 +155,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-2.3</artifactId>
-      <version>2.3.12</version>
+      <version>${cypher.compatibility.23}</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
@@ -182,7 +182,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-3.1</artifactId>
-      <version>3.1.8</version>
+      <version>${cypher.compatibility.31}</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
@@ -221,7 +221,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-3.3</artifactId>
-      <version>3.3.6</version>
+      <version>${cypher.compatibility.33}</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
