--- a/public/pom.xml
+++ b/public/pom.xml
@@ -95,8 +95,11 @@
     <scala.target.vm>1.8</scala.target.vm>
     <scala.java.additional.args/>
     <jersey.version>1.19.3</jersey.version>
-
     <currentYear>2018</currentYear>
+    <cypher.compatibility.23>2.3.12</cypher.compatibility.23>
+    <cypher.compatibility.31>3.1.9</cypher.compatibility.31>
+    <cypher.compatibility.33>3.3.6</cypher.compatibility.33>
+    <caffeine.version>2.6.2</caffeine.version>
   </properties>
 
   <modules>
@@ -963,7 +966,7 @@
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
-        <version>2.6.2</version>
+        <version>${caffeine.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
