--- a/public/pom.xml
+++ b/public/pom.xml
@@ -98,8 +98,11 @@
     <jersey.version>1.19.3</jersey.version>
     <junit.version>5.2.0</junit.version>
     <junit.platform.version>1.2.0</junit.platform.version>
-
     <currentYear>2018</currentYear>
+    <cypher.compatibility.23>2.3.12</cypher.compatibility.23>
+    <cypher.compatibility.31>3.1.9</cypher.compatibility.31>
+    <cypher.compatibility.34>3.4.1</cypher.compatibility.34>
+    <caffeine.version>2.6.2</caffeine.version>
   </properties>
 
   <modules>
@@ -1001,7 +1004,7 @@
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
-        <version>2.6.2</version>
+        <version>${caffeine.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
