--- a/public/pom.xml
+++ b/public/pom.xml
@@ -68,7 +68,7 @@
     <lucene.version>5.5.5</lucene.version>
     <bouncycastle.version>1.59</bouncycastle.version>
     <generate-config-docs-phase>prepare-package</generate-config-docs-phase>
-    <java9.exports/>
+    <java.exports/>
     <test.runner.jvm/>
     <test.runner.jvm.settings.additional/>
     <test.runner.jvm.settings>-Xmx2G -XX:+UseG1GC -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError
@@ -77,7 +77,7 @@
       -Dorg.neo4j.io.pagecache.impl.muninn.usePreciseCursorErrorStackTraces=true
       -Dorg.neo4j.kernel.impl.api.KernelStatement.trackStatements=true
       -Dorg.org.neo4j.kernel.impl.newapi.DefaultCursors.trackCursors=true
-      -XX:+UnlockExperimentalVMOptions -XX:+TrustFinalNonStaticFields ${java9.exports} ${test.runner.jvm.settings.additional}
+      -XX:+UnlockExperimentalVMOptions -XX:+TrustFinalNonStaticFields ${java.exports} ${test.runner.jvm.settings.additional}
     </test.runner.jvm.settings>
     <jetty.version>9.4.11.v20180605</jetty.version>
     <findbugs.version>3.0.1</findbugs.version>
@@ -93,7 +93,7 @@
     <asm.version>6.2</asm.version>
     <metrics.version>4.0.2</metrics.version>
     <scala.target.vm>1.8</scala.target.vm>
-    <scala.java9.arg/>
+    <scala.java.additional.args/>
     <jersey.version>1.19.3</jersey.version>
 
     <currentYear>2018</currentYear>
@@ -552,7 +552,7 @@
               <arg>100</arg>
               <arg>-Xlint</arg>
               <arg>-target:jvm-${scala.target.vm}</arg>
-              <arg>${scala.java9.arg}</arg>
+              <arg>${scala.java.additional.args}</arg>
             </args>
             <jvmArgs>
               <jvmArg>-Xms64m</jvmArg>
@@ -611,7 +611,7 @@
           <configuration>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
-            <compilerArgument>${java9.exports}</compilerArgument>
+            <compilerArgument>${java.exports}</compilerArgument>
           </configuration>
         </plugin>
         <plugin>
@@ -891,15 +891,15 @@
     </profile>
 
     <profile>
-      <id>java9</id>
+      <id>java9And10</id>
       <activation>
         <activeByDefault>false</activeByDefault>
-        <jdk>9</jdk>
+        <jdk>[9, 10]</jdk>
       </activation>
       <properties>
-        <java9.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-modules java.xml.bind</java9.exports>
+        <java.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-modules java.xml.bind</java.exports>
         <maven.javadoc.skip>true</maven.javadoc.skip>
-        <scala.java9.arg>-nobootcp</scala.java9.arg>
+        <scala.java.additional.args>-nobootcp</scala.java.additional.args>
       </properties>
     </profile>
 
