Add profile for neo4j-server with java.xml.bind
JDK 9+ does not contain JAXB. It can be added with
"--add-modules java.xml.bind" for JDK 9 and 10. However, JAXB is
completely removed from JDK 11. This commit adds a new profile to the
neo4j-server module  with additional dependencies on JAXB to make
`ServerConfigIT` pass.

--- a/public/pom.xml
+++ b/public/pom.xml
@@ -1405,6 +1405,33 @@
         <version>0.15</version>
         <scope>test</scope>
       </dependency>
+
+      <!-- The following 4 dependencies are needed to run neo4j-server test on JDK 9+ where java.xml.bind is missing -->
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.0</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 </project>
