--- a/public/community/server/pom.xml
+++ b/public/community/server/pom.xml
@@ -77,6 +77,35 @@
     </license>
   </licenses>
 
+  <profiles>
+    <!-- Profile for JDK 9+ that adds JAXB dependencies absent in the JDK -->
+    <profile>
+      <id>java9AndLater</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <jdk>[9, )</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-core</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>activation</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
