Update spatial index module tests to junit5
Update tests to junit 5 and rewrite some of it to use standard logger
instead of test made pure replacement and save some time on generating
ignored debug messages.

--- a/public/community/spatial-index/pom.xml
+++ b/public/community/spatial-index/pom.xml
@@ -68,16 +68,11 @@ the relevant Commercial Agreement.
   </licenses>
 
     <dependencies>
-        <!-- Main dependencies -->
-
-        <!-- Test dependencies -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-migrationsupport</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-logging</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
