Avoid trimming stack traces from test failures in surefire.
This helps debugging flaky tests.

--- a/public/pom.xml
+++ b/public/pom.xml
@@ -344,6 +344,7 @@
           <version>2.21.0</version>
           <configuration>
             <forkCount>${forkCounts}</forkCount>
+            <trimStackTrace>false</trimStackTrace>
             <reuseForks>true</reuseForks>
             <argLine>${test.runner.jvm.settings}</argLine>
             <runOrder>random</runOrder>
