--- a/public/community/community-it/bolt-it/pom.xml
+++ b/public/community/community-it/bolt-it/pom.xml
@@ -118,5 +118,9 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+        </dependency>
     </dependencies>
 </project>
